--- a/TME_IC_Saito2008/V1/TME_IC.ipynb
+++ b/TME_IC_Saito2008/V1/TME_IC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,48 +36,48 @@
       "  (2, 3)\t0.4\n",
       "  (2, 4)\t0.6\n",
       "Random Graph\n",
-      "  (0, 1)\t0.35793808\n",
-      "  (0, 2)\t0.9866501\n",
-      "  (0, 3)\t0.013221352\n",
-      "  (0, 4)\t0.1828696\n",
-      "  (0, 5)\t0.03427853\n",
-      "  (0, 6)\t0.38070202\n",
-      "  (1, 0)\t0.8288135\n",
-      "  (1, 2)\t0.055521414\n",
-      "  (1, 3)\t0.21423219\n",
-      "  (1, 4)\t0.77184093\n",
-      "  (1, 5)\t0.112766765\n",
-      "  (1, 6)\t0.0021552218\n",
-      "  (2, 0)\t0.18658401\n",
-      "  (2, 1)\t0.18757546\n",
-      "  (2, 3)\t0.2970758\n",
-      "  (2, 4)\t0.35188803\n",
-      "  (2, 5)\t0.8878879\n",
-      "  (2, 6)\t0.068491265\n",
-      "  (3, 0)\t0.8192144\n",
-      "  (3, 1)\t0.48997146\n",
-      "  (3, 2)\t0.01632727\n",
-      "  (3, 4)\t0.26126522\n",
-      "  (3, 5)\t0.40720692\n",
-      "  (3, 6)\t0.94067585\n",
-      "  (4, 0)\t0.5607623\n",
-      "  (4, 1)\t0.31207532\n",
-      "  (4, 2)\t0.32916886\n",
-      "  (4, 3)\t0.19208989\n",
-      "  (4, 5)\t0.21371375\n",
-      "  (4, 6)\t0.54073435\n",
-      "  (5, 0)\t0.22994892\n",
-      "  (5, 1)\t0.4682285\n",
-      "  (5, 2)\t0.7443926\n",
-      "  (5, 3)\t0.20502649\n",
-      "  (5, 4)\t0.87337327\n",
-      "  (5, 6)\t0.60775065\n",
-      "  (6, 0)\t0.33565366\n",
-      "  (6, 1)\t0.7427652\n",
-      "  (6, 2)\t0.5562697\n",
-      "  (6, 3)\t0.3382322\n",
-      "  (6, 4)\t0.17150491\n",
-      "  (6, 5)\t0.7333921\n"
+      "  (0, 1)\t0.6668038\n",
+      "  (0, 2)\t0.22190805\n",
+      "  (0, 3)\t0.544171\n",
+      "  (0, 4)\t0.19102918\n",
+      "  (0, 5)\t0.8954404\n",
+      "  (0, 6)\t0.5133796\n",
+      "  (1, 0)\t0.1304498\n",
+      "  (1, 2)\t0.4974894\n",
+      "  (1, 3)\t0.5976379\n",
+      "  (1, 4)\t0.950712\n",
+      "  (1, 5)\t0.32473055\n",
+      "  (1, 6)\t0.74529326\n",
+      "  (2, 0)\t0.217423\n",
+      "  (2, 1)\t0.8162855\n",
+      "  (2, 3)\t0.1129149\n",
+      "  (2, 4)\t0.87297654\n",
+      "  (2, 5)\t0.7347039\n",
+      "  (2, 6)\t0.20040265\n",
+      "  (3, 0)\t0.94846225\n",
+      "  (3, 1)\t0.96577746\n",
+      "  (3, 2)\t0.6390994\n",
+      "  (3, 4)\t0.2123754\n",
+      "  (3, 5)\t0.5311662\n",
+      "  (3, 6)\t0.4648414\n",
+      "  (4, 0)\t0.17772995\n",
+      "  (4, 1)\t0.97153217\n",
+      "  (4, 2)\t0.4636219\n",
+      "  (4, 3)\t0.495635\n",
+      "  (4, 5)\t0.6778511\n",
+      "  (4, 6)\t0.99952847\n",
+      "  (5, 0)\t0.66017884\n",
+      "  (5, 1)\t0.12974547\n",
+      "  (5, 2)\t0.0077006654\n",
+      "  (5, 3)\t0.9104476\n",
+      "  (5, 4)\t0.59879464\n",
+      "  (5, 6)\t0.952536\n",
+      "  (6, 0)\t0.88597757\n",
+      "  (6, 1)\t0.3391013\n",
+      "  (6, 2)\t0.643241\n",
+      "  (6, 3)\t0.29102704\n",
+      "  (6, 4)\t0.71193\n",
+      "  (6, 5)\t0.53580844\n"
      ]
     }
    ],
@@ -103,12 +103,12 @@
     "nodes = np.arange(handmadeGraph.shape[0])\n",
     "\n",
     "def randomGraph(nodes):\n",
-    "    m=len(nodes)\n",
+    "    m=max(nodes)+1\n",
     "    graph = dok_matrix((m,m),dtype=float32)\n",
-    "    for i in range(m):\n",
-    "        for j in range(m):\n",
-    "            if(i!=j):\n",
-    "                graph[i,j]=np.random.rand()\n",
+    "    for n1 in nodes:\n",
+    "        for n2 in nodes:\n",
+    "            if(n1!=n2):\n",
+    "                graph[n1,n2]=np.random.rand()\n",
     "    return graph\n",
     "print(\"Random Graph\")\n",
     "print(randomGraph(nodes))"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 1: 1, 2: 1, 4: 2}, {0: 0, 1: 1, 2: 1}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}]\n"
+      "[{0: 0, 2: 1, 3: 2, 4: 2}, {0: 0, 1: 1, 3: 2}, {0: 0, 1: 1}]\n"
      ]
     }
    ],
@@ -197,15 +197,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 1: 1, 2: 1, 4: 2}, {0: 0, 1: 1, 2: 1}] \n",
-      " [[[0], [1, 2], [4]], [[0], [1, 2]]]\n"
+      "[{0: 0, 2: 1, 3: 2, 4: 2}, {0: 0, 1: 1, 3: 2}] \n",
+      " [[[0], [2], [3, 4]], [[0], [1], [3]]]\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,14 +306,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Maximisation_uv(g,D_plus_id,Dminus_len,p_sw,u,v):\n",
     "    '''Calcule les nouveaux paramètre pour l'arete u,v '''\n",
     "    if ((len(D_plus_id[u][v])+Dminus_len[u][v]) == 0):\n",
-    "        raise Exception(f\"{u}-{v} Division zero\")\n",
+    "        #raise Exception(f\"{u}-{v} Division zero\")\n",
+    "        return 0\n",
     "    return (1/(len(D_plus_id[u][v])+Dminus_len[u][v])) *sum([g[u,v]/p_sw[i][v] for i in D_plus_id[u][v]])\n",
     "\n",
     "\n",
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -336,12 +337,12 @@
      "output_type": "stream",
      "text": [
       "{0, 1, 2, 3, 4}\n",
-      "  (0, 1)\t0.46\n",
-      "  (0, 2)\t0.54\n",
-      "  (1, 3)\t0.5957176\n",
-      "  (1, 4)\t4.4472476e-27\n",
-      "  (2, 3)\t0.41914776\n",
-      "  (2, 4)\t0.5740741\n"
+      "  (0, 1)\t0.5\n",
+      "  (0, 2)\t0.51\n",
+      "  (1, 3)\t0.58487135\n",
+      "  (1, 4)\t4.70519e-32\n",
+      "  (2, 3)\t0.43633896\n",
+      "  (2, 4)\t0.54901963\n"
      ]
     }
    ],
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,21 +459,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 1)\t0.46\n",
-      "  (0, 2)\t0.54\n",
-      "  (0, 3)\t2.848232e-13\n",
-      "  (0, 4)\t1.4095633e-27\n",
-      "  (1, 3)\t0.5957176\n",
-      "  (1, 4)\t4.2353156e-27\n",
-      "  (2, 3)\t0.41914776\n",
-      "  (2, 4)\t0.5740741\n"
+      "  (0, 1)\t0.5\n",
+      "  (0, 2)\t0.51\n",
+      "  (0, 3)\t4.7499366e-11\n",
+      "  (0, 4)\t1.5377493e-30\n",
+      "  (1, 3)\t0.58487135\n",
+      "  (1, 4)\t5.263753e-32\n",
+      "  (2, 3)\t0.43633896\n",
+      "  (2, 4)\t0.54901963\n"
      ]
     }
    ],
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,15 +578,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original  graph MAP score :  0.9303888888888889\n",
-      "inference graph MAP score :  0.9361944444444444\n"
+      "original  graph MAP score :  0.9368333333333334\n",
+      "inference graph MAP score :  0.9268611111111111\n"
      ]
     }
    ],
@@ -593,6 +594,74 @@
     "print(\"original  graph MAP score : \",MAP(D,handmadeGraph))\n",
     "print(\"inference graph MAP score : \",MAP(D,finalGraph))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test avec matrices Sparses : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GenerateData(nbNodes,nbCascades,density=0.1):\n",
+    "    ''' Genere un graph aléatoire et des données '''\n",
+    "    sparseGraph = dok_matrix(random(nbNodes,nbNodes,density=density))\n",
+    "    cascades = []\n",
+    "    for i in range(nbCascades):\n",
+    "        startNode = np.random.randint(nbNodes)\n",
+    "        cascades.append(genCascade(sparseGraph,startNode))\n",
+    "        # cascade representation : \n",
+    "    D = [cascade_repr(c) for c in cascades]\n",
+    "    return sparseGraph,D\n",
+    "\n",
+    "def ModelScore(D,trainD,testD):\n",
+    "    ''' Apprends un modele sur ensemble de trainD \n",
+    "        et renvoi le résultat sur un ensemble de testD'''\n",
+    "    nodes = set()\n",
+    "    for Ds in D:\n",
+    "        for Ds_t in Ds : \n",
+    "            nodes.update(set(Ds_t))\n",
+    "    predictedGraph = EM_IC_2(trainD,nodes)\n",
+    "    return MAP(testD,predictedGraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original  graph MAP score :  0.9600711480474993\n",
+      "predictedGraph MAP score :  0.8040477578916287\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Params : \n",
+    "nbNodes = 200\n",
+    "nbCascades = 400\n",
+    "originalGraph,D = GenerateData(nbNodes,nbCascades,0.007)\n",
+    "trainD,testD = D[int(nbCascades/2):],D[:int(nbCascades/2)]\n",
+    "predictedScore = ModelScore(D,trainD,testD)\n",
+    "originalScore = MAP(D,originalGraph)\n",
+    "print(\"original  graph MAP score : \",originalScore)\n",
+    "print(\"predictedGraph MAP score : \",predictedScore)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
